--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "@ziemniakoss/cspell-bitbucket-code-insights-reporter",
-  "version": "0.0.2",
-  "main": "src/index.js",
+  "version": "0.0.3",
+  "main": "dist/index.js",
   "scripts": {
-    "prepublish": "npx tsc ."
+    "prepack": "npx tsc"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "author": "ziemniakoss",
   "license": "MIT",
