--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -15,6 +15,8 @@ jobs:
           node-version: 18
           registry-url: "https://registry.npmjs.org"
           always-auth: true
+      - run: npm ci
+        name: "Install dependencies"
       - run: npm publish --access public
         name: "Publish to registry"
         env:
