--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
-  "name": "@ziemniakoss/cspell-bitbucket-code-insights-reporter",
-  "version": "0.0.4",
-  "main": "dist/index.js",
-  "scripts": {
-    "prepack": "npx tsc"
-  },
-  "publishConfig": {
-    "access": "public"
-  },
-  "author": "ziemniakoss",
-  "license": "MIT",
-  "description": "Reporter for CSPell that generates",
-  "dependencies": {
-    "@cspell/cspell-types": "^8.17.3"
-  },
-  "devDependencies": {
-    "@types/node": "^22.13.1",
-    "cspell": "^8.17.3",
-    "prettier": "3.4.2",
-    "typescript": "^5.7.3"
-  }
+    "name": "@ziemniakoss/cspell-bitbucket-code-insights-reporter",
+    "version": "0.0.5",
+    "main": "dist/src/index.js",
+    "scripts": {
+        "prepack": "npx tsc",
+        "test": "mocha dist/test"
+    },
+    "publishConfig": {
+        "access": "public"
+    },
+    "type": "commonjs",
+    "author": "ziemniakoss",
+    "license": "MIT",
+    "description": "Reporter for CSPell that generates",
+    "dependencies": {
+        "@cspell/cspell-types": "^8.17.3"
+    },
+    "devDependencies": {
+        "@types/mocha": "^10.0.10",
+        "@types/node": "^22.13.1",
+        "cspell": "^8.17.3",
+        "mocha": "^11.1.0",
+        "prettier": "3.4.2",
+        "typescript": "^5.7.3"
+    }
 }
